# pelican_test

./: CMakeLists.txt  LICENSE  package.xml
R2017b/rtw/c/accel/: accel_lcc64.tmf  accel_unix.tmf  accel_vcx64.tmf
R2017b/rtw/c/ert/: ert_tornado.tmf  ert_unix.tmf  ert_vcx64.tmf
R2017b/rtw/c/grt/: classic_main.c  grt_lcc64.tmf  grt_unix.tmf  grt_vcx64.tmf
R2017b/rtw/c/grt_malloc/: grt_malloc_main.c  grt_malloc_unix.tmf  grt_malloc_vcx64.tmf
R2017b/rtw/c/modelref/: modelrefsim_lcc64.tmf
R2017b/rtw/c/raccel/: raccel.tlc  raccel_lcc64.tmf  raccel_main.c  raccel_main_new.c  raccel_mat.c  raccel_parallel.tlc  raccel_unix.tmf  raccel_vcx64.tmf
R2017b/rtw/c/rsim/: rsim.tlc  rsim_lcc64.tmf  rsim_main.c  rsim_unix.tmf  rsim_vcx64.tmf
R2017b/rtw/c/rtwsfcn/: rtwsfcn_unix.tmf  rtwsfcn_vcx64.tmf
R2017b/rtw/c/tlc/blocks/: fromfile.tlc  fromspreadsheet.tlc  fromwks.tlc  gensfun.tlc  linlib.tlc  logging_sup.tlc  modelref.tlc  slio.tlc  toasyncqueue.tlc  tofile.tlc  towks.tlc
R2017b/rtw/c/tlc/fixpt/: fixpt_preprocessor_guards.tlc  fixptlook1D.tlc  fixptlook2D.tlc  fixptlook_search.tlc
R2017b/rtw/c/tlc/lib/: mathlib.tlc  (+9 more)
R2017b/rtw/c/tools/: lcc-win64.xml  lcc64tools.mak  unixtools.mk
R2017b/rtw/c/tornado/: tornado.tmf
cfg/: controllerDyn.cfg
include/: common.h  parameters.h  parameters_ros.h
launch/: autopilot_hinf.launch  autopilot_hinf_Gazebo.launch
src/: matlab_autopilot_hinf_node.cpp
src/autopilot_hinf/: autopilot_hinf.cpp  autopilot_hinf.h  autopilot_hinf_data.cpp  autopilot_hinf_private.h  autopilot_hinf_types.h  multiword_types.h  rtmodel.h  rtwtypes.h
(+109 files in other folders)
